# src/swagger.json
@@ -157,7 +157,7 @@
           }
         },
         "responses": {
-          "201": {
+          "200": {
             "description": "Updated"
           },
           "400": {
@@ -248,6 +248,30 @@
           },
           "400": {
             "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/clients/{user_id}": {
+      "get": {
+        "tags": ["Clients"],
+        "summary": "Get all clients",
+        "description": "To list a orders you need the route param 'user_id'",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "user_id",
+            "required": true,
+            "type": "number",
+            "format": "number"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "404": {
+            "description": "User not exists"
           }
         }
       }
